Refactor DS Management
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>